--- a/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
+++ b/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
@@ -1,65 +1,104 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "2021-01-12-entendendo-cmap-tools.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CmapTools, o app essencial nos GTs\n",
+    "> Explicação sobre Mapas Mentais vs Mapas Conceituais e o aplicativo Cmaps.\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [cmap]\n",
+    "- image: images/chart-preview.png"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FGd6umt39KtX"
-      },
-      "source": [
-        "# CmapTools, o app essencial nos GTs\n",
-        "> Explicação sobre Mapas Mentais vs Mapas Conceituais e o aplicativo Cmaps.\n",
-        "\n",
-        "- toc: true \n",
-        "- badges: true\n",
-        "- comments: true\n",
-        "- categories: [cmap][mapa-mental]"
-      ]
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Boxes / Callouts \n",
+    "\n",
+    "Typing `> Warning: There will be no second warning!` will render this:\n",
+    "\n",
+    "\n",
+    "> Warning: There will be no second warning!\n",
+    "\n",
+    "\n",
+    "\n",
+    "Typing `> Important: Pay attention! It's important.` will render this:\n",
+    "\n",
+    "> Important: Pay attention! It's important.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Typing `> Tip: This is my tip.` will render this:\n",
+    "\n",
+    "> Tip: This is my tip.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Typing `> Note: Take note of this.` will render this:\n",
+    "\n",
+    "> Note: Take note of this.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Typing `> Note: A doc link to [an example website: fast.ai](https://www.fast.ai/) should also work fine.` will render in the docs:\n",
+    "\n",
+    "> Note: A doc link to [an example website: fast.ai](https://www.fast.ai/) should also work fine."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
     },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_oqthSaL5q4d"
-      },
-      "source": [
-        "## O que é o Cmap Tools?\n",
-        "\n",
-        "Cmaps é um software de produção de mapas conceituais e de mapas mentais (porém principalmente de mapas conceituais).\n",
-        "\n",
-        "## Em que classe eu vou usar esse programa?\n",
-        "\n",
-        "Os GTs na unifor valorizam a o método PBL de aprendizagem e requerem o uso de mapas conceituais para fixar o material. O aplicativo Cmaps é o mais recomendado pelos professores.\n",
-        "\n",
-        "O vídeo abaixo explica em mais detalhes o método PBL.\n",
-        "\n",
-        ">youtube: https://www.youtube.com/watch?v=DjjxDNV5uzM&t=108s\n",
-        "\n",
-        "## Mapa Mental vs. Mapa Conceitual\n",
-        "\n",
-        "Vou usar a descrição do Prof. Filippo Valiante. Para ler mais, o site dele está disponível [aqui](http://prof.valiante.info/dicas-de/mapa-mental-e-mapa-conceitual).\n",
-        "> Nos mapas mentais, há sempre uma ideia central (raiz), a partir da qual se \"puxam\" as ideias conectadas (galhos), numa estrutura em árvore. Em cada \"nó\", ou \"caixa\" do mapa, há apenas uma palavra, ou uma pequena frase. A organização é feita de forma a encadear o pensamento. E vale tudo: trabalhar com as cores, inserir imagens, etc.\n",
-        "\n",
-        ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.\n",
-        "\n",
-        "## O Tutorial Completo de Cmaps Tools\n",
-        "\n",
-        "Para instalar o app, basta seguir as instruções nesse [link](https://cmap.ihmc.us/cmaptools/cmaptools-download/).\n",
-        ">Important: É necessário preencher o formnulário no site para que os botões de download fiquem disponíveis.  \n",
-        "\n",
-        "Após instalação, você já pode começar a criar os seus mapas conceituais. Um guia básico de utilização poderá ser encontrado no vídeo abaixo, mas logo em seguida vão ter dicas de como customizar e elevar os seus mapas mentais para o próximo nível.\n",
-        ">youtube: https://youtu.be/V7FfaAkmUy8?t=317"
-      ]
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
     }
-  ]
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
