--- a/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
+++ b/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
@@ -18,36 +18,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Boxes / Callouts \n",
+    "## O que é o Cmap Tools?\n",
     "\n",
-    "Typing `> Warning: There will be no second warning!` will render this:\n",
+    "Cmaps é um software de produção de mapas conceituais e de mapas mentais (porém principalmente de mapas conceituais).\n",
     "\n",
+    "## Em que classe eu vou usar esse programa?\n",
     "\n",
-    "> Warning: There will be no second warning!\n",
+    "Os GTs na unifor valorizam a o método PBL de aprendizagem e requerem o uso de mapas conceituais para fixar o material. O aplicativo Cmaps é o mais recomendado pelos professores.\n",
     "\n",
+    "O vídeo abaixo explica em mais detalhes o método PBL.\n",
     "\n",
+    ">youtube: https://www.youtube.com/watch?v=DjjxDNV5uzM&t=108s\n",
     "\n",
-    "Typing `> Important: Pay attention! It's important.` will render this:\n",
+    "## Mapa Mental vs. Mapa Conceitual\n",
     "\n",
-    "> Important: Pay attention! It's important.\n",
+    "Vou usar a descrição do Prof. Filippo Valiante. Para ler mais, o site dele está disponível [aqui](http://prof.valiante.info/dicas-de/mapa-mental-e-mapa-conceitual).\n",
+    "> Nos mapas mentais, há sempre uma ideia central (raiz), a partir da qual se \"puxam\" as ideias conectadas (galhos), numa estrutura em árvore. Em cada \"nó\", ou \"caixa\" do mapa, há apenas uma palavra, ou uma pequena frase. A organização é feita de forma a encadear o pensamento. E vale tudo: trabalhar com as cores, inserir imagens, etc.\n",
     "\n",
+    ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.\n",
     "\n",
+    "## O Tutorial Completo de Cmaps Tools\n",
     "\n",
-    "Typing `> Tip: This is my tip.` will render this:\n",
+    "Para instalar o app, basta seguir as instruções nesse [link](https://cmap.ihmc.us/cmaptools/cmaptools-download/).\n",
+    ">Important: É necessário preencher o formnulário no site para que os botões de download fiquem disponíveis.  \n",
     "\n",
-    "> Tip: This is my tip.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Typing `> Note: Take note of this.` will render this:\n",
-    "\n",
-    "> Note: Take note of this.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Typing `> Note: A doc link to [an example website: fast.ai](https://www.fast.ai/) should also work fine.` will render in the docs:\n",
-    "\n",
-    "> Note: A doc link to [an example website: fast.ai](https://www.fast.ai/) should also work fine."
+    "Após instalação, você já pode começar a criar os seus mapas conceituais. Um guia básico de utilização poderá ser encontrado no vídeo abaixo, mas logo em seguida vão ter dicas de como customizar e elevar os seus mapas mentais para o próximo nível.\n",
+    ">youtube: https://youtu.be/V7FfaAkmUy8?t=317"
    ]
   }
  ],
