--- a/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
+++ b/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
@@ -8,10 +8,9 @@
     "> Explicação sobre Mapas Mentais vs Mapas Conceituais e o aplicativo Cmaps.\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
-    "- categories: [cmap]\n",
-    "- image: images/chart-preview.png"
+    "- categories: [cmap]"
    ]
   },
   {
@@ -28,14 +27,15 @@
     "\n",
     "O vídeo abaixo explica em mais detalhes o método PBL.\n",
     "\n",
-    ">youtube: https://www.youtube.com/watch?v=DjjxDNV5uzM&t=108s\n",
+    ">youtube: https://www.youtube.com/watch?v=DjjxDNV5uzM\n",
     "\n",
     "## Mapa Mental vs. Mapa Conceitual\n",
     "\n",
     "Vou usar a descrição do Prof. Filippo Valiante. Para ler mais, o site dele está disponível [aqui](http://prof.valiante.info/dicas-de/mapa-mental-e-mapa-conceitual).\n",
     "> Nos mapas mentais, há sempre uma ideia central (raiz), a partir da qual se \"puxam\" as ideias conectadas (galhos), numa estrutura em árvore. Em cada \"nó\", ou \"caixa\" do mapa, há apenas uma palavra, ou uma pequena frase. A organização é feita de forma a encadear o pensamento. E vale tudo: trabalhar com as cores, inserir imagens, etc.\n",
     "\n",
-    ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.\n",
+    ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.  \n",
+    "\n",
     "\n",
     "## O Tutorial Completo de Cmaps Tools\n",
     "\n",
@@ -43,7 +43,7 @@
     ">Important: É necessário preencher o formnulário no site para que os botões de download fiquem disponíveis.  \n",
     "\n",
     "Após instalação, você já pode começar a criar os seus mapas conceituais. Um guia básico de utilização poderá ser encontrado no vídeo abaixo, mas logo em seguida vão ter dicas de como customizar e elevar os seus mapas mentais para o próximo nível.\n",
-    ">youtube: https://youtu.be/V7FfaAkmUy8?t=317"
+    ">youtube: https://youtu.be/V7FfaAkmUy8?t=317\n"
    ]
   }
  ],
