--- a/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
+++ b/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
@@ -37,13 +37,28 @@
     ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.  \n",
     "\n",
     "\n",
-    "## O Tutorial Completo de Cmaps Tools\n",
+    "## Instalação\n",
     "\n",
     "Para instalar o app, basta seguir as instruções nesse [link](https://cmap.ihmc.us/cmaptools/cmaptools-download/).\n",
-    ">Important: É necessário preencher o formnulário no site para que os botões de download fiquem disponíveis.  \n",
     "\n",
-    "Após instalação, você já pode começar a criar os seus mapas conceituais. Um guia básico de utilização poderá ser encontrado no vídeo abaixo, mas logo em seguida vão ter dicas de como customizar e elevar os seus mapas mentais para o próximo nível.\n",
-    ">youtube: https://youtu.be/V7FfaAkmUy8?t=317\n"
+    ">Important: É necessário preencher o formnulário no site para que os botões de download fiquem disponíveis.   \n",
+    "\n",
+    "## O Básico de CmapTools\n",
+    "\n",
+    "Após instalação, você já pode começar a criar os seus mapas conceituais. Um guia básico de utilização poderá ser encontrado no vídeo abaixo, mas logo em seguida vão ter dicas de como customizar e elevar os seus mapas mentais para o próximo nível. Recomendo começar o vídeo no minuto 5:17.\n",
+    "\n",
+    "\n",
+    ">youtube: https://youtu.be/V7FfaAkmUy8?t=317\n",
+    "\n",
+    "###  Documentação\n",
+    "\n",
+    "A documentação completa do aplicativo Cmaps (com instruções e imagens em inglês, espanhol e francês) estão [disponíveis aqui](https://cmap.ihmc.us/docs/cmaptools-help/). Em um futuro próximo, prentendo construir um tutorial extensivo sobre o passo a passo necessário para fazer um mapa mental, talvez até um vídeo.\n",
+    "\n",
+    "### Dúvidas\n",
+    "\n",
+    "Teve dúvidas ou sugestões, escreva nos comentários desse post ou mande no grupo da T30. Agora você tem o poder dos mapas conceituais nas suas mãos.\n",
+    "\n",
+    ">Escrito por: Alexandre Filho."
    ]
   }
  ],
