--- a/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
+++ b/_notebooks/2021_01_12_entendendo_cmap_tools.ipynb
@@ -27,12 +27,13 @@
     "\n",
     "O vídeo abaixo explica em mais detalhes o método PBL.\n",
     "\n",
-    ">youtube: https://www.youtube.com/watch?v=DjjxDNV5uzM\n",
+    ">youtube: https://youtu.be/DjjxDNV5uzM\n",
     "\n",
     "## Mapa Mental vs. Mapa Conceitual\n",
     "\n",
     "Vou usar a descrição do Prof. Filippo Valiante. Para ler mais, o site dele está disponível [aqui](http://prof.valiante.info/dicas-de/mapa-mental-e-mapa-conceitual).\n",
-    "> Nos mapas mentais, há sempre uma ideia central (raiz), a partir da qual se \"puxam\" as ideias conectadas (galhos), numa estrutura em árvore. Em cada \"nó\", ou \"caixa\" do mapa, há apenas uma palavra, ou uma pequena frase. A organização é feita de forma a encadear o pensamento. E vale tudo: trabalhar com as cores, inserir imagens, etc.\n",
+    "> Nos mapas mentais, há sempre uma ideia central (raiz), a partir da qual se \"puxam\" as ideias conectadas (galhos), numa estrutura em árvore. Em cada \"nó\", ou \"caixa\" do mapa, há apenas uma palavra, ou uma pequena frase. A organização é feita de forma a encadear o pensamento. E vale tudo: trabalhar com as cores, inserir imagens, etc.  \n",
+    "\n",
     "\n",
     ">Os mapas conceituais diferem dos mentais pela presença de uma conexão entre os conceitos registrados nos nós, ou caixas. Essa conexão é feita sempre com um verbo, ou locução. Por exemplo: \"é\", \"pode ser\", \"deriva de\", \"pode ser feito com\", \"constituem\". É também muito comum que os conceitos sejam interligados, numa estrutura mais para rede do que para árvore.  \n",
     "\n",
@@ -58,7 +59,7 @@
     "\n",
     "Teve dúvidas ou sugestões, escreva nos comentários desse post ou mande no grupo da T30. Agora você tem o poder dos mapas conceituais nas suas mãos.\n",
     "\n",
-    ">Escrito por: Alexandre Filho."
+    ">Escrito por Alexandre Filho."
    ]
   }
  ],
