--- a/_notebooks/2021-01-12-entendendo-cmap-tools.ipynb
+++ b/_notebooks/2021-01-12-entendendo-cmap-tools.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "### Dúvidas\n",
     "\n",
-    "Teve dúvidas ou sugestões, escreva nos comentários desse post ou mande no grupo da T30. Agora você tem o poder dos mapas conceituais nas suas mãos.\n",
+    "Teve dúvidas ou sugestões? Escreva nos comentários desse post ou mande no grupo da T30. Agora você tem o poder dos mapas conceituais nas suas mãos.\n",
     "\n",
     ">Escrito por Alexandre Filho."
    ]
